# prepromali

./: ChangeLog  README  configure.ac
src/: Makefile.am  arg.c  arg.h  getseqs.c  getseqs.h  prepromali.c  prepromali.h  putseqs.c  putseqs.h  safe.c  seq.h
tests/: Makefile.am  test0.fastaln  test0.sh  test1.fastaln  test1.sh  test2.sh
