#===============================================================================
# Makefile.am : for automake
#===============================================================================
#
noinst_DATA = \
	test0.fastaln \
	test1.fastaln

noinst_SCRIPTS = \
	test0.sh \
	test1.sh \
	test2.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

